Fix Resolve the issue of scroll top padding on mobile and small screens

--- a/src/index.css
+++ b/src/index.css
@@ -83,17 +83,17 @@
 
 @media (max-width: 480px) {
   :root {
-    scroll-padding-top: calc(var(--header-height) + 25px);
+    scroll-padding-top: calc(var(--header-height) + 15px);
   }
 }
 
-@media (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 767px) {
   :root {
     scroll-padding-top: calc(var(--header-height) + 15px);
   }
 }
 
-@media (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 991px) {
   :root {
     scroll-padding-top: 15px;
   }
